--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
         
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.jboss.tools.example.springmvc</groupId>
+    <groupId>com.nikit</groupId>
     <artifactId>spring-eap6-quickstart</artifactId>
     <packaging>war</packaging>
     <version>0.0.1-SNAPSHOT</version>
